@@ -872,99 +872,180 @@ static void process_check(DB_DRULE *rule, DB_DHOST *dhost, int *host_status, DB_
  ******************************************************************************/
 static void process_rule(DB_DRULE *rule)
 {
+	const char	*__function_name = "process_rule";
 	DB_RESULT	result;
 	DB_ROW		row;
 	DB_DCHECK	check;
 	DB_DHOST	dhost;
 	int		host_status, now;
 
-	char		ip[MAX_STRING_LEN], prefix[MAX_STRING_LEN];
+	char		ip[HOST_IP_LEN_MAX];
 	unsigned int	j[9], i;
-	int		first, last, ipv6;
+	unsigned int	first, last, mask, network, broadcast;
 
-	char	*curr_range, *next_range, *dash;
+	char		*curr_range, *next_range, *dash, *slash;
 #if defined(HAVE_IPV6)
-	char	*colon;
+	int		ipv6;
+/*	char		*colon, prefix[MAX_STRING_LEN];*/
 #endif
 
 	assert(rule);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In process_rule() [name:%s] [range:%s]",
-		rule->name,
-		rule->iprange);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s() Rule:'%s' Range:'%s'", __function_name,
+			rule->name,
+			rule->iprange);
 
-	for ( curr_range = rule->iprange; curr_range; curr_range = next_range )
+	for (curr_range = rule->iprange; curr_range; curr_range = next_range)
 	{ /* split by ',' */
 		if (NULL != (next_range = strchr(curr_range, ',')))
 			*next_range = '\0';
 
+		zabbix_log(LOG_LEVEL_DEBUG, "%s() '%s'", __function_name,
+				curr_range);
+
 		if (NULL != (dash = strchr(curr_range, '-')))
 			*dash = '\0';
 
-		first = last = -1;
+		if (NULL != (slash = strchr(curr_range, '/')))
+			*slash = '\0';
+
+		first = last = 0;
 #if defined(HAVE_IPV6)
-		if ( SUCCEED == expand_ipv6(curr_range, ip, sizeof(ip)) )
+		if (SUCCEED == expand_ipv6(curr_range, ip, sizeof(ip)))
 		{
 			ipv6 = 1;
-			if( sscanf(ip, "%x:%x:%x:%x:%x:%x:%x:%x", &j[0], &j[1], &j[2], &j[3], &j[4], &j[5], &j[6], &j[7]) == 8 )
+			if (8 == sscanf(ip, "%x:%x:%x:%x:%x:%x:%x:%x", &j[0], &j[1], &j[2], &j[3], &j[4], &j[5], &j[6], &j[7]))
 			{
-				first = j[7];
+				first = (j[6] << 16) + j[7];
 
-				zbx_strlcpy( prefix, curr_range, sizeof(prefix) );
-				if( NULL != (colon = strrchr(prefix, ':')) )
+				if (NULL != dash)
 				{
-					( colon + 1 )[0] = '\0';
+					if (1 == sscanf(dash + 1, "%x", &j[8]))
+						last = (j[6] << 16) + j[8];
 				}
-			}
+				else if (NULL != slash)
+				{
+					if (1 == sscanf(slash + 1, "%d", &j[8]) && j[8] >= 112 && j[8] <= 128)
+					{
+						j[8] -= 96;
 
-			if (NULL != dash)
-			{
-				if (sscanf(dash + 1, "%x", &j[8]) == 1)
-					last = j[8];
+						mask = (32 == j[8]) ? 0xffffffff : ~(0xffffffff >> j[8]);
+						network = first & mask;
+						broadcast = network + ~mask;
+						first = network + 1;                          
+
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv6 CIDR:%u", __function_name, j[8] + 96);
+						zbx_snprintf(ip, sizeof(ip), "%x:%x:%x:%x:%x:%x:%x:%x",
+								0xffff, 0xffff, 0xffff, 0xffff, 0xffff, 0xffff,
+								(mask & 0xffff0000) >> 16, (mask & 0x0000ffff));
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv6 Netmask:'%s'",
+								__function_name, collapse_ipv6(ip, sizeof(ip)));
+						zbx_snprintf(ip, sizeof(ip), "%x:%x:%x:%x:%x:%x:%x:%x",
+								j[0], j[1], j[2], j[3], j[4], j[5],
+								(network & 0xffff0000) >> 16, (network & 0x0000ffff));
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv6 Network:'%s'",
+								__function_name, collapse_ipv6(ip, sizeof(ip)));
+						zbx_snprintf(ip, sizeof(ip), "%x:%x:%x:%x:%x:%x:%x:%x",
+								j[0], j[1], j[2], j[3], j[4], j[5],
+								(broadcast & 0xffff0000) >> 16, (broadcast & 0x0000ffff));
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv6 Broadcast:'%s'",
+								__function_name, collapse_ipv6(ip, sizeof(ip)));
+
+						if (j[8] <= 30)
+							last = broadcast - 1;
+					}
+				}
+				else
+					last = first;
+
+				zbx_snprintf(ip, sizeof(ip), "%x:%x:%x:%x:%x:%x:%x:%x",
+						j[0], j[1], j[2], j[3], j[4], j[5],
+						(first & 0xffff0000) >> 16, (first & 0x0000ffff));
+				zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv6 From:'%s'",
+						__function_name, collapse_ipv6(ip, sizeof(ip)));
+				zbx_snprintf(ip, sizeof(ip), "%x:%x:%x:%x:%x:%x:%x:%x",
+						j[0], j[1], j[2], j[3], j[4], j[5],
+						(last & 0xffff0000) >> 16, (last & 0x0000ffff));
+				zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv6 To:'%s'",
+						__function_name, collapse_ipv6(ip, sizeof(ip)));
 			}
-			else
-				last = first;
 		}
 		else
 		{
+			ipv6 = 0;
 #endif /* HAVE_IPV6 */
-			ipv6  = 0;
-			if( sscanf(curr_range, "%d.%d.%d.%d", &j[0], &j[1], &j[2], &j[3]) == 4 )
+			if (4 == sscanf(curr_range, "%d.%d.%d.%d", &j[0], &j[1], &j[2], &j[3]) &&
+					j[0] >= 0 && j[0] <= 255 &&
+					j[1] >= 0 && j[1] <= 255 &&
+					j[2] >= 0 && j[2] <= 255 &&
+					j[3] >= 0 && j[3] <= 255)
 			{
-				first = j[3];
-			}
+				first = (j[0] << 24) + (j[1] << 16) + (j[2] << 8) + j[3];
 
-			if( dash != NULL )
-			{
-				if( sscanf(dash + 1, "%d", &j[4]) == 1 )
+				if (NULL != dash)
 				{
-					last = j[4];
+					if (1 == sscanf(dash + 1, "%d", &j[4]) && j[4] >= 0 && j[4] <= 255)
+						last = (j[0] << 24) + (j[1] << 16) + (j[2] << 8) + j[4];
 				}
-			}
-			else
-			{
-				last = first;
+				else if (NULL != slash)
+				{
+					if (1 == sscanf(slash + 1, "%d", &j[4]) && j[4] >= 16 && j[4] <= 32)
+					{
+						mask = (32 == j[4]) ? 0xffffffff : ~(0xffffffff >> j[4]);
+						network = first & mask;
+						broadcast = network + ~mask;
+						first = network + 1;                          
+
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv4 CIDR:%u", __function_name, j[4]);
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv4 Netmask:'%u.%u.%u.%u'", __function_name,
+								(mask & 0xff000000) >> 24, (mask & 0x00ff0000) >> 16,
+								(mask & 0x0000ff00) >> 8, (mask & 0x000000ff));
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv4 Network:'%u.%u.%u.%u'", __function_name,
+								(network & 0xff000000) >> 24, (network & 0x00ff0000) >> 16,
+								(network & 0x0000ff00) >> 8, (network & 0x000000ff));
+						zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv4 Broadcast:'%u.%u.%u.%u'", __function_name,
+								(broadcast & 0xff000000) >> 24, (broadcast & 0x00ff0000) >> 16,
+								(broadcast & 0x0000ff00) >> 8, (broadcast & 0x000000ff));
+
+						if (j[4] <= 30)
+							last = broadcast - 1;
+					}
+				}
+				else
+					last = first;
+
+				zabbix_log(LOG_LEVEL_DEBUG, "%s() IPv4 Range:'%u.%u.%u.%u' - '%u.%u.%u.%u'", __function_name,
+						(first & 0xff000000) >> 24, (first & 0x00ff0000) >> 16,
+						(first & 0x0000ff00) >> 8, (first & 0x000000ff),
+						(last & 0xff000000) >> 24, (last & 0x00ff0000) >> 16,
+						(last & 0x0000ff00) >> 8, (last & 0x000000ff));
 			}
 #if defined(HAVE_IPV6)
 		}
 #endif /* HAVE_IPV6 */
 
-		if( dash )
+		if (NULL != dash)
 		{
-			dash[0] = '-';
+			*dash = '-';
 			dash = NULL;
 		}
 
-		if ( next_range )
+		if (NULL != slash)
 		{
-			next_range[0] = ',';
+			*slash = '/';
+			slash = NULL;
+		}
+
+		if (NULL != next_range)
+		{
+			*next_range = ',';
 			next_range ++;
 		}
 
-		if( first < 0 || last < 0 )
+		if (first == 0 || last == 0 || first > last)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Discovery: Wrong format of IP range [%s]",
-				rule->iprange);
+			zabbix_log(LOG_LEVEL_WARNING, "Discovery: Wrong format of IP range '%s'",
+					curr_range);
 			continue;
 		}
 
@@ -975,12 +1056,27 @@ static void process_rule(DB_DRULE *rule)
 
 			now = time(NULL);
 
+#if defined(HAVE_IPV6)
 			switch(ipv6) {
-				case 0 : zbx_snprintf(ip, sizeof(ip), "%d.%d.%d.%d", j[0], j[1], j[2], i); break;
-				case 1 : zbx_snprintf(ip, sizeof(ip), "%s%x", prefix, i); break;
+			case 0 :
+#endif /* HAVE_IPV6 */
+				zbx_snprintf(ip, sizeof(ip), "%u.%u.%u.%u",
+						(i & 0xff000000) >> 24,
+						(i & 0x00ff0000) >> 16,
+						(i & 0x0000ff00) >> 8,
+						(i & 0x000000ff));
+#if defined(HAVE_IPV6)
+				break;
+			case 1 :
+				zbx_snprintf(ip, sizeof(ip), "%x:%x:%x:%x:%x:%x:%x:%x",
+						j[0], j[1], j[2], j[3], j[4], j[5],
+						(i & 0xffff0000) >> 16, (i & 0x0000ffff));
+				collapse_ipv6(ip, sizeof(ip));
+				break;
 			}
+#endif /* HAVE_IPV6 */
 
-			zabbix_log(LOG_LEVEL_DEBUG, "Discovery: process_rule() [IP:%s]", ip);
+			zabbix_log(LOG_LEVEL_DEBUG, "%s() IP:'%s'", __function_name, ip);
 
 			result = DBselect("select dcheckid,type,key_,snmp_community,snmpv3_securityname,"
 					"snmpv3_securitylevel,snmpv3_authpassphrase,snmpv3_privpassphrase,ports"
@@ -1019,7 +1115,7 @@ static void process_rule(DB_DRULE *rule)
 		}
 	}
 
-	zabbix_log( LOG_LEVEL_DEBUG, "End process_rule()");
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
 static void process_discovery(int now)
